force-app/main/default/objects/Object_Trigger_Settings__mdt/Object_Trigger_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Defines Lightning LDV settings on an object-by-object basis. The Name field must be populated with the API name of the object being configured.</description>
    <label>Object Trigger Settings</label>
    <pluralLabel>Object_Trigger_Settings</pluralLabel>
</CustomObject>