force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Apex_Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Handler_Name__c</fullName>
    <description>The name of the Apex Class that will act as the handler for the Lightning LDV trigger. It must implement the LightningLDV__TriggerHandlerInterface interface.</description>
    <label>Apex Handler Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>