force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Changed_Fields_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Changed_Fields_API_Name__c</fullName>
    <description>Defines the API Name of the &quot;Changed Fields&quot; field, which will be used to track changes to fields defined in &quot;Tracked Fields&quot; in this custom setting. The &quot;Changed Field&quot; field must be a Text Area field, and should be long enough to contain all possible changed fields.</description>
    <label>Changed Fields API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>