force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Time__c</fullName>
    <description>Tracks the last time the Lightning LDV trigger for this object ran, so that only records updated since the last run time are processed. This will be automatically updated by the Lightning LDV trigger.</description>
    <label>Last Run Time</label>
    <type>DateTime</type>
</CustomField>