force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Queried_Fields__c.field-meta.xml
<CustomField>
    <fullName>Queried_Fields__c</fullName>
    <description>Defines all fields that are needed for the Lightning LDV trigger to process (enter as a comma separated list with no spaces). These will need to be queried, since the business logic will run as a batch process.</description>
    <label>Queried Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>