force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Run_After_Deletes__c.field-meta.xml
<CustomField>
    <fullName>Run_After_Deletes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run the onAfterDelete method for this Lightning LDV trigger, which is equivalent to the AfterDelete context of a standard apex trigger (a Lightning LDV trigger is really a batch process that is scheduled from a trigger)</description>
    <label>Run After Deletes</label>
    <type>Checkbox</type>
</CustomField>