force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Run_After_Inserts__c.field-meta.xml
<CustomField>
    <fullName>Run_After_Inserts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run the onAfterInsert method for this Lightning LDV trigger, which is equivalent to the AfterInsert context of a standard apex trigger (a Lightning LDV trigger is really a batch process that is scheduled from a trigger)</description>
    <label>Run After Inserts</label>
    <type>Checkbox</type>
</CustomField>