force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Run_After_Undeletes__c.field-meta.xml
<CustomField>
    <fullName>Run_After_Undeletes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run the onAfterUndelete method for this Lightning LDV trigger, which is equivalent to the AfterUndelete context of a standard apex trigger (a Lightning LDV trigger is really a batch process that is scheduled from a trigger)</description>
    <label>Run After Undeletes</label>
    <type>Checkbox</type>
</CustomField>