force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Run_After_Updates__c.field-meta.xml
<CustomField>
    <fullName>Run_After_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run the onAfterUpdate method for this Lightning LDV trigger, which is equivalent to the AfterUpdate context of a standard apex trigger (a Lightning LDV trigger is really a batch process that is scheduled from a trigger)</description>
    <label>Run After Updates</label>
    <type>Checkbox</type>
</CustomField>