force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Tracked_Fields__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Fields__c</fullName>
    <description>Defines the fields being tracked by the Lightning LDV trigger (enter as a comma separated list with no spaces). Every record of the object itself will contain a field with a comma separated list of all fields whose values have changed that are in this list.</description>
    <label>Tracked Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>