force-app/main/default/objects/Object_Trigger_Settings__mdt/fields/Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Update_Field__c</fullName>
    <description>Defines the API Name of the &quot;Is Update&quot; field, which will be used to track if a record was updated when it was last modified. This will be used to differentiate updates from undeletes. The &quot;Is Update&quot; field must be a checkbox field.</description>
    <label>Is Update API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>